# glimmer-cradle

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  glimmer-cradle.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
core/cognition/: pyproject.toml
core/cognition/src/glimmer_cradle/cognition/: __init__.py
core/cognition/src/glimmer_cradle/cognition/activity/: __init__.py  controller.py  policy.py  projection.py  transition.py
core/cognition/src/glimmer_cradle/cognition/affect/: __init__.py  emotion.py  rules.py
core/cognition/src/glimmer_cradle/cognition/application/: agent_plan_use_case.py  agent_synthesis_use_case.py  base_use_case.py
core/cognition/src/glimmer_cradle/cognition/context/: __init__.py  assembly.py
core/cognition/src/glimmer_cradle/cognition/conversation/: __init__.py  controller.py  models.py  store.py
core/cognition/src/glimmer_cradle/cognition/cycle/: __init__.py  action_emitter.py  action_planner.py  appraisal.py  continuity.py  controller.py  deliberation.py  perception_queue.py  reply_context.py  reply_text.py  turn.py  workspace.py
core/cognition/src/glimmer_cradle/cognition/experience/: __init__.py  episodes.py  events.py  ledger.py  narrative.py  recorder.py
core/cognition/src/glimmer_cradle/cognition/foundation/: __init__.py  config.py  exceptions.py  lifecycle.py  path_utils.py
core/cognition/src/glimmer_cradle/cognition/host/: __init__.py  composition.py  process.py
core/cognition/src/glimmer_cradle/cognition/identity/: self_entity.py
core/cognition/src/glimmer_cradle/cognition/inference/: __init__.py  cloud.py  content.py  embedding.py  gateway.py  multimodal.py  service.py
core/cognition/src/glimmer_cradle/cognition/maintenance/: __init__.py  scheduler.py
core/cognition/src/glimmer_cradle/cognition/memory/: consolidation.py  knowledge_base.py  relationship_projection.py  substrate.py
core/cognition/src/glimmer_cradle/cognition/observability/: __init__.py  logger.py  metrics.py  model_invocations.py  telemetry.py  trace_context.py  tracer.py
core/cognition/src/glimmer_cradle/cognition/persona/: dialogue_policy_builder.py  persona_injector.py  profile_compiler.py  prompt_assembler.py
core/cognition/src/glimmer_cradle/cognition/ports/: __init__.py
core/cognition/tests/: test_affect_memory_providers.py  test_agent_plan_use_case.py  test_agent_synthesis_use_case.py  test_cognitive_activity.py  test_context_assembly.py  test_conversation_architecture.py  test_cycle_controller.py  test_dlq_cli.py  test_drive_social_providers.py  test_embedding_engine.py  test_experience_architecture.py  test_global_workspace.py  test_inference_gateway.py  test_knowledge_base_persist.py  test_memory_architecture.py  test_metrics.py  test_model_invocations.py  test_path_utils.py  test_perception_cycle.py  test_perception_provider.py  test_persona_injector.py  test_process_entrypoint.py  test_provider_contracts.py  test_reasoning_service.py  test_reply_text.py  test_telemetry_facade.py  test_trace_context.py  test_tracer.py  test_vector_repo.py  test_volition.py
engines/audio/: pyproject.toml
engines/audio/src/glimmer_cradle/audio/: __init__.py  main.py  protocol.py  resource_catalog.py  resources.json  runtime_paths.py
engines/audio/src/glimmer_cradle/audio/asr/: __init__.py  funasr_engine.py
engines/audio/tests/: test_protocol.py  test_resource_catalog.py
native/: CMakeLists.txt  package.manifest.json
native/include/: platform_native.h
native/src/avatar/: unity_avatar_host_launcher_windows.cpp
native/src/composition/: composition_host_stub.cpp  composition_host_windows.cpp
(+725 files in other folders)
