[project]
name = "glimmer-cradle-audio-engine"
version = "0.1.4"
description = "Official audio engine for Glimmer Cradle ASR/TTS providers."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
asr = [
    "funasr>=1.3.9,<1.4",
    "modelscope>=1.17,<1.38",
    "numpy>=1.26,<2.3",
    "torch>=2.4,<2.8",
    "torchaudio>=2.4,<2.8",
]
tts = [
    "websockets>=14,<16",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
glimmer-cradle-audio = "glimmer_cradle.audio.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["glimmer_cradle.audio*"]
namespaces = true

[tool.setuptools.package-data]
"glimmer_cradle.audio" = ["resources.json"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
